# demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml  format.yml  frontend.yml  main.yml  python.yml  spelling.yml
frontend/: .prettierrc.toml  eslint.config.js  index.html  package.json  shims.d.ts  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
frontend/app/: App.svelte  App.test.js  App.test.ts  HeroPage.svelte  HeroPage.test.js  main.ts  test-suite.js
src/: __init__.py  entry.py
src/logic/: __init__.py  main.py  translate.py
src/logic/tools/: __init__.py  base.py  fetch.py  python.py  serp.py  stub.py
src/routes/: openai.py  prompts.py  run.py  sse.py
src/templates/: Main.j2  chat_messages.j2  extract.j2  main.j2  python.j2  show_return_values.j2  show_tools.j2  sse.j2  suggest.j2  translate.j2
src/templates/schema/: code_interpreter.md  output.py  output.ts  serp.j2
src/tests/: test_init.py  test_load.py  test_prompts.py  test_run.py  test_translate.py
src/tools/: pnpm.py
src/utils/: cache.py  config.py  functional.py  functional.pyi  helpers.py  http.py  load.py  node.py  node.pyi  openai_api.py  prefill.py  response.py  time.py
src/utils/llm/: __init__.py  anthropic.py  azure.py  cerebras.py  chatglm.py  common.py  deepseek.py  dispatch.py  google.py  groq.py  minimax.py  octoai.py  openai.py  openrouter.py  qwen.py  sambanova.py  siliconflow.py  test_anthropic.py  test_chatglm.py  test_openai.py  xai.py  xiaomi.py  yi.py  zai.py
src/utils/llm/common/: __init__.py  http.py  messages.py  trim.py
tests/: test_anthropic.py  test_common.py  test_config.py  test_heartbeat.py  test_load.py  test_main.py  test_octoai.py  test_openai.py  test_output.py  test_qwen.py  test_run.py  test_stub.py  test_suite.py
tests/logic/: test_main.py
tests/logic/tools/: test_base.py  test_stub.py
tests/routes/: test_run.py
tests/utils/: test_config.py  test_llm_minimax.py
tests/utils/llm/: test_anthropic.py  test_qwen.py
