[project]
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi~=0.110.3",
    "uvicorn[standard]~=0.29.0",
    "promplate[all]~=0.3.4.4",
    "promplate-trace[langfuse,langsmith]==0.3.0dev2",
    "python-box~=7.1.1",
    "pydantic-settings~=2.2.1",
    "httpx[http2]~=0.27.0",
    "promptools[stream,validation]~=0.1.3.2",
    "fake-useragent~=1.5.1",
    "html2text~=2024.2.26",
    "beautifulsoup4~=4.12.3",
    "rich~=13.7.1",
    "zhipuai~=2.0.1",
    "anthropic~=0.25.7",
    "dashscope~=1.17.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "isort~=5.13.2",
    "black~=24.4.2",
]

[tool.pdm.scripts]
fmt = { composite = ["isort ./{args}", "black ./{args}"] }
dev = "uvicorn src:app --reload"
prod = "uvicorn src:app --host 0.0.0.0 --port $PORT"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130

[tool.pyright]
exclude = ["**/*.pyi"]
include = ["src"]