[project]
name = "promplate-demo"
version = "1"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.32.0",
    "promplate[all]~=0.3.4.7",
    "promplate-trace[langfuse,langsmith]==0.3.0dev5",
    "python-box~=7.2.0",
    "pydantic-settings~=2.6.0",
    "httpx[http2]~=0.27.0",
    "promptools[stream,validation]~=0.1.3.3",
    "fake-useragent~=1.5.1",
    "html2text~=2024.2.26",
    "beautifulsoup4~=4.12.3",
    "rich~=13.9.0",
    "zhipuai~=2.1.0.20240521",
    "anthropic~=0.38.0",
    "dashscope~=1.20.2",
    "logfire[fastapi,system-metrics,httpx]~=2.1.1",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "isort~=5.13.2",
    "black~=24.4.2",
]

[tool.pdm.scripts]
fmt = { composite = ["isort ./{args}", "black ./{args}"] }
dev = "uvicorn src.entry:app --reload"
prod = "uvicorn src.entry:app --host 0.0.0.0 --port $PORT"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130

[tool.pyright]
exclude = ["**/*.pyi"]
include = ["src"]