[project]
name = "promplate-demo"
version = "1"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.34.0",
    "promplate[all]~=0.3.5.0",
    "promplate-trace[langfuse,langsmith]==0.3.0dev5",
    "python-box~=7.3.0",
    "pydantic-settings~=2.9.0",
    "httpx[http2]~=0.28.0",
    "promptools[stream,validation]~=0.1.3.3",
    "fake-useragent~=2.2.0",
    "html2text~=2025.4.15",
    "beautifulsoup4~=4.13.1",
    "rich~=14.0.0",
    "zhipuai~=2.1.5.20241203",
    "anthropic~=0.54.0",
    "dashscope~=1.23.0",
    "logfire[fastapi,system-metrics,httpx]~=3.21.0",
]

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "isort~=6.0.0",
    "black~=25.1.0",
]

[tool.pdm.scripts]
fmt = { composite = ["isort ./{args}", "black ./{args}"] }
dev = "uvicorn src.entry:app --reload"
prod = "uvicorn src.entry:app --host 0.0.0.0 --port $PORT"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130

[tool.pyright]
exclude = ["**/*.pyi"]
include = ["src"]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "error"
